# llm-integration-starter

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CUSTOMIZATION.md  DEMO_MODE.md  DEPLOY.md  Dockerfile  Makefile  README.md  SECURITY.md  SPONSORS.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
benchmarks/: RESULTS.md  run_benchmarks.py
demo_data/: api_reference.txt  faq.txt  policy.txt
docs/adr/: 0001-circuit-breaker-pattern.md  0002-fallback-chain-design.md  0003-response-caching-strategy.md
llm_integration_starter/: __init__.py  cache.py  cli.py  client.py  cost_tracker.py  fallback.py  function_calling.py  guardrails.py  retry.py  streaming.py  token_counter.py
llm_integration_starter/agents/: langgraph_agent.py
llm_integration_starter/providers/: __init__.py  base.py  mock.py
llm_starter/: __init__.py  batch_processor.py  completion.py  cost_tracker.py  function_calling.py  hardening.py  latency_tracker.py  mock_llm.py  observability.py  rag_pipeline.py  streaming.py
tests/: conftest.py  test_batch_processor.py  test_cache.py  test_cli.py  test_client.py  test_completion.py  test_cost_tracker.py  test_edge_cases.py  test_fallback.py  test_function_calling.py  test_guardrails.py  test_hardening.py  test_langgraph_agent.py  test_latency_tracker.py  test_mock_llm.py  test_observability.py  test_providers.py  test_rag_pipeline.py  test_retry.py  test_streaming.py
