[project]
name = "llm-integration-starter"
version = "0.1.0"
description = "Production-ready LLM integration patterns: completion, streaming, function calling, RAG, and hardening"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
