[project]
name = "llm-integration-starter"
version = "0.1.0"
description = "Beginner-friendly LLM integration starter kit"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "ChunkyTortoise"}]
readme = "README.md"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[project.scripts]
llm-starter = "llm_integration_starter.cli:cli"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_integration_starter*", "llm_starter*"]
exclude = ["tests*", "demo_data*"]
